# genii

./: .gitignore  AGENTS.md  LICENSE.md  README.md  biome.json  package.json  pnpm-lock.yaml  renovate.json  turbo.json
.github/workflows/: ci.yml  publish.yml
apps/cli/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/cli/src/: client.ts  index.ts
apps/cli/src/commands/: onboard.ts  pulse.ts  tui.ts
apps/cli/src/output/: formatter.ts  human.ts  json.ts  quiet.ts
apps/cli/src/tui/: app.tsx
apps/cli/src/utils/: errors.ts  spinner.ts  time.ts
apps/daemon/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/daemon/src/: daemon.ts  factory-log-level.test.ts  factory.ts  index.ts  onboard.ts
apps/daemon/src/channels/: factory.ts  init.ts  telegram.ts  (+1 more)
apps/desktop/: package.json
apps/desktop/src/: main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: publish-all.sh
shared/comms/: package.json  tsconfig.json
shared/config/: package.json
shared/config/src/: config.test.ts  config.ts  paths.ts
shared/guidance/: README.md  package.json  tsconfig.json  tsup.config.ts
shared/guidance/docs/: instructions.md  memories.md  skills.md  soul.md  tasks.md
shared/guidance/templates/: .gitignore  INSTRUCTIONS.md  PULSE.md  SOUL.md  index.ts
shared/lib/: package.json
shared/models/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
shared/models/src/: capabilities.ts  factory.ts  identifier.ts  types.ts
shared/orchestrator/: package.json  tsconfig.json  tsup.config.ts
(+221 files in other folders)
