[package]
name = "genii"
version = "0.1.0"
description = "Genii Desktop App"
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "genii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-opener = "=2.5.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
